--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="style.css" />
-    <link rel="shortcut icon" type="image/x-icon" href="img/icon.png" />
-    <link rel="kit-fontawesome" href="fontawesome/css/fontawesome.min.css ">
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="shortcut icon" type="image/x-icon" href="img/icon.png">
+    <link href="fontawesome/css/all.css " rel="stylesheet">
     <title>Développeuse Web freelance</title>
 </head>
 
@@ -38,7 +38,7 @@
         <h3 class="aside_titre">Loisirs</h3>
         <div class="icon_loisirs">
             <span class="fa-music fa-2x"><i class="fas fa-music"></i></span>
-            <span class="fa-film fa-2x"><i class="fas fa-music"></i></span>
+            <span class="fa-film fa-2x"><i class="fas fa-film"></i></span>
             <span class="fa-book fa-2x"><i class="fas fa-book"></i></span>
         </div>
     </div>
