sauvegarde du jour

--- a/index.html
+++ b/index.html
@@ -21,10 +21,11 @@
             <div id="contact" title="Contact">
                 <h3 class="aside_titre">Contact</h3>
                 <ul class="contact">
-                    <li>Adresse<br />Le Mans, France</li>
-                    <li>Téléphone<br />07 49 37 96 21</li>
-                    <li>Email<br /><a href="mailto:cyn.rim.web@gmail.com">cyn.rim.web@gmail.com</a></li>
-                    <li>Site web<br /><a href=https://cynthia-remiki.fr>www.cynthia-remiki.fr</a></li>
+                    <li><strong>Adresse</strong><br />Le Mans, France</li>
+                    <li><strong>Téléphone</strong><br />07 49 37 96 21</li>
+                    <li><strong>Email</strong><br /><a href="mailto:cyn.rim.web@gmail.com">cyn.rim.web@gmail.com</a></li>
+                    <li><strong>Site web </strong> <br /><a href=https://cynrim.github.io/CV-en-ligne/>www.cynrim.github.io</a>
+                    </li>
                 </ul>
             </div>
             <h3 class="aside_titre_gras">à propos de moi</h3>
@@ -50,7 +51,7 @@
 
             <!--le trait sous dével-->
             <div id="titre">
-                <h2><span id="souligne_dev">Dével</span>oppeuse web freelance</h2>
+                <h2><span id="surligne_dev">Dével</span>oppeuse web freelance</h2>
             </div>
 
             <!---La partie mobile-->
