--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="shortcut icon" type="image/x-icon" href="img/icon.png">
     <link href="fontawesome/css/all.css " rel="stylesheet">
     <title>Développeuse Web freelance</title>
 </head>
@@ -84,7 +83,7 @@
 
                             <div class="texte_paragraphe">
                                 <h4>Openclassrooms</h4><br />
-                                <h5>Formation développeur Web (diplôme niveau 5)</h5><br />
+                                <h5>Formation développeur Web</h5><br />
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum bibendum dolor tempus dapibus posuere. Curabitur sed ante ut sem sagittis mattis.</p>
                             </div>
                         </div>
