mise a jour du 21.02.2020

--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
 
             <!--le trait sous dével-->
             <div id="titre">
-                <h2><span id="surligne_dev">Dével</span>oppeuse web freelance</h2>
+                <h2><span id="surligne_dev">Dével</span>oppeuse Web freelance</h2>
             </div>
 
             <!---La partie mobile-->
             <article id="logo_header">
                 <h3>Ma Photo</h3>
-                <a href="img/logo.jpg"><img src="img/logo.jpg" alt="logo" class="logo_header" /></a>
+                <img src="img/logo.jpg" alt="logo" class="logo_header" />
             </article>
             <!---La partie mobile fin-->
 
@@ -171,25 +171,15 @@
                 </div>
                 <ul class="page_liste">
                     <li>
-                        <div class="formation">
+                        <div class="profession">
                             <div class="puce_bloc">
                                 <div class="page_puce">
                                     <i class="far fa-dot-circle"></i>
-                                </div>
-                            </div>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="formation">
-                            <div class="puce_bloc">
-                                <div class="page_puce">
-                                    <i class="fas fa-circle fa-xs"></i>
                                 </div>
                                 <div class="annee">
                                     2015 - 2018<br /> Le Mans
                                 </div>
                             </div>
-
                             <div class="texte_paragraphe">
                                 <h4>Anyway Éditions</h4><br />
                                 <h5>Éditrice</h5><br />
@@ -198,48 +188,54 @@
                                 <p>Faire la comptabilité (Facture, devis, déclaration TVA…)</p>
                             </div>
                         </div>
+
                     </li>
+
                     <li>
-                        <div class="formation">
+                        <div class="profession">
                             <div class="puce_bloc">
                                 <div class="page_puce">
                                     <i class="fas fa-circle fa-xs"></i>
                                 </div>
                                 <div class="annee">
-                                    2009 - 2010<br />Paris
+                                    2009 - 2010<br /> Paris
                                 </div>
                             </div>
 
                             <div class="texte_paragraphe">
                                 <h4>Bertrand SAS</h4><br />
-                                <h5>Secrétaire Aide Comptable</h5><br />
-                                <p>Traiter fiche clients</p>
-                                <p>Gérer des litiges</p>
-                                <p>Réaliser des commandes</p>
-                                <p>Accueillir des clients au téléphone</p>
+                                <h5>Secrétaire Aide-Comptable</h5><br />
+                                <p>Traiter des fiches clients</p>
+                                <p>Gérer les litiges</p>
+                                <p>Accueil téléphonique</p>
+                                <p>Passer des commandes</p>
                             </div>
                         </div>
                     </li>
                     <li>
-                        <div class="formation">
+                        <div class="profession">
                             <div class="puce_bloc">
                                 <div class="page_puce">
                                     <i class="fas fa-circle fa-xs"></i>
                                 </div>
                                 <div class="annee">
-                                    2007<br />Paris
+                                    2007<br /> Paris
                                 </div>
                             </div>
 
                             <div class="texte_paragraphe">
                                 <h4>Total France</h4><br />
-                                <h5>Gestionnaires de compte Clients</h5><br />
+                                <h5>Éditrice</h5><br />
                                 <p>Traiter des fiches clients</p>
                                 <p>Gérer les litiges</p>
                                 <p>Gérer des dossiers administratifs</p>
                             </div>
                         </div>
                     </li>
+
+
+
+
 
                 </ul>
             </article>
