avant derniere touche du CV

--- a/index.html
+++ b/index.html
@@ -16,27 +16,30 @@
             <div id="logo">
                 <img src="img/logo.jpg" alt="Mon logo" class="image">
             </div>
-            <div id="contact">
-                <h3 class="aside_titre">Contact</h3>
+            <article id="contact">
+                <h3 class="aside_titre_gras">Contact</h3>
                 <ul class="contact">
                     <li>Adresse<br /> Le Mans, France</li>
                     <li>Téléphone<br />00 XX XX XX XX</li>
                     <li>Email<br /> <a href="mailto:cyn.rim.web@gmail.com">cyn.rim.web@gmail.com</a></li>
                     <li>Site Web<br /> <a href="https://cynrim.github.io/CV-en-ligne">cyn.rim.web.github.io</a></li>
                 </ul>
-            </div>
-            <h3 class="aside_titre_gras">À propos de moi</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis eros nulla, ultricies in tempor sit amet, mattis id lacus. Pellentesque eget neque et nisi vehicula maximus. Praesent faucibus vestibulum erat, id accumsan lorem consectetur tempor.
-                Donec pharetra volutpat nunc at consequat. Cras porta a augue sed semper.</p>
+            </article>
 
-            <div id="loisirs">
-                <h3 class="aside_titre">Loisirs</h3>
-                <div class="icon_loisir">
+            <article id="a_propos">
+                <h3 class="aside_titre_gras">À propos de moi</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis eros nulla, ultricies in tempor sit amet, mattis id lacus. Pellentesque eget neque et nisi vehicula maximus. Praesent faucibus vestibulum erat, id accumsan lorem consectetur
+                    tempor. Donec pharetra volutpat nunc at consequat. Cras porta a augue sed semper.</p>
+            </article>
+
+            <article id="loisirs">
+                <h3 class="aside_titre_gras">Loisirs</h3>
+                <div class="icon_loisirs">
                     <span class="fa-music fa-2px"><i class="fas fa-music"></i></span>
                     <span class="fa-film fa-2px"><i class="fas fa-film"></i></span>
                     <span class="fa-book fa-2px"><i class="fas fa-book"></i> </span>
                 </div>
-            </div>
+            </article>
         </aside>
 
         <section id="centre">
@@ -48,7 +51,7 @@
                 </div>
 
                 <!--LA PARTIE MOBILE DEBUT-->
-                <article id="logo_header">
+                <article id="cadre_logo">
                     <h3>Mon Logo</h3>
                     <img src="img/logo.jpg" alt="logo" class="logo_header" />
                 </article>
@@ -177,9 +180,7 @@
                                 <div class="texte">
                                     <h4>Anyway Éditions</h4> <br />
                                     <h5 class="poste">Éditrice</h5>
-                                    <p>Réception des manuscrits</p>
-                                    <p>Préparer un manuscrit pour l’impression</p>
-                                    <p>Gérer la comptabilité</p>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis eros nulla, ultricies in tempor sit amet, mattis id lacus. Pellentesque eget neque et nisi vehicula maximus.</p>
                                 </div>
                             </div>
                         </li>
@@ -197,10 +198,7 @@
                                 <div class="texte">
                                     <h4>Bertand SAS</h4> <br />
                                     <h5 class="poste">Secrétaire Aide-Comtpable</h5>
-                                    <p>Traiter des fiches clients</p>
-                                    <p>Gérer les litiges</p>
-                                    <p>Accueil téléphonique</p>
-                                    <p>Passer des commandes</p>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis eros nulla, ultricies in tempor sit amet, mattis id lacus. Pellentesque eget neque et nisi vehicula maximus.</p>
                                 </div>
                             </div>
                         </li>
@@ -218,9 +216,7 @@
                                 <div class="texte">
                                     <h4>Total France</h4> <br />
                                     <h5 class="poste">Gestionnaire Compte Clients</h5>
-                                    <p>Traiter des fiches clients</p>
-                                    <p>Gérer les litiges</p>
-                                    <p>Gérer des dossiers administratifs</p>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis eros nulla, ultricies in tempor sit amet, mattis id lacus. Pellentesque eget neque et nisi vehicula maximus.</p>
                                 </div>
                             </div>
                         </li>
