--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
             <article id="loisirs">
                 <h3 class="aside_titre_gras">Loisirs</h3>
                 <div class="icon_loisirs">
-                    <span class="fa-music fa-2px"><i class="fas fa-music"></i></span>
-                    <span class="fa-film fa-2px"><i class="fas fa-film"></i></span>
-                    <span class="fa-book fa-2px"><i class="fas fa-book"></i> </span>
+                    <i class="fas fa-music"></i>
+                    <i class="fas fa-film"></i>
+                    <i class="fas fa-book"></i>
                 </div>
             </article>
         </aside>
@@ -189,7 +189,7 @@
                             <div class="profession">
                                 <div class="puce_bloc">
                                     <div class="page_puce">
-                                        <i class="far fa-dot-circle"></i>
+                                        <i class="fas fa-circle fa-xs"></i>
                                     </div>
                                     <div class="annee">
                                         2009 - 2010 <br /> Paris
@@ -207,7 +207,7 @@
                             <div class="profession">
                                 <div class="puce_bloc">
                                     <div class="page_puce">
-                                        <i class="far fa-dot-circle"></i>
+                                        <i class="fas fa-circle fa-xs"></i>
                                     </div>
                                     <div class="annee">
                                         2007 <br /> Paris
