sauvegarde du jour 24.02.2020

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
             <article id="a_propos">
                 <h3 class="aside_titre_gras">À propos de moi</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis eros nulla, ultricies in tempor sit amet, mattis id lacus. Pellentesque eget neque et nisi vehicula maximus. Praesent faucibus vestibulum erat, id accumsan lorem consectetur
+                <p class="apropos">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis eros nulla, ultricies in tempor sit amet, mattis id lacus. Pellentesque eget neque et nisi vehicula maximus. Praesent faucibus vestibulum erat, id accumsan lorem consectetur
                     tempor. Donec pharetra volutpat nunc at consequat. Cras porta a augue sed semper.</p>
             </article>
 
