--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
             <article id="loisirs">
                 <h3 class="aside_titre_gras">Loisirs</h3>
                 <div class="icon_loisirs">
-                    <i class="fas fa-music"></i>
-                    <i class="fas fa-film"></i>
-                    <i class="fas fa-book"></i>
+                    <span class="fa-stack"><i class="fas fa-music"></i></span>
+                    <span class="fa-stack"><i class="fas fa-film"></i></span>
+                    <span class="fa-stack"><i class="fas fa-book"></i></span>
                 </div>
             </article>
         </aside>
@@ -243,37 +243,5 @@
         </section>
     </div>
 </body>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 </html>
