modification suite a soutenance

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="style.css" rel="stylesheet" type="text/css">
     <link href="fontawesome/css/all.css" rel="stylesheet">
     <title>Développeuse Web freelance</title>
@@ -12,10 +13,13 @@
 <body>
 
     <div id="contenu">
+        <!--LA PARTIE GAUCHE-->
         <aside id="liseret">
+            <!--LE LOGO-->
             <div id="logo">
                 <img src="img/logo.jpg" alt="Mon logo" class="image">
             </div>
+            <!--LA PARTIE CONTACT-->
             <article id="contact">
                 <h3 class="aside_titre_gras">Contact</h3>
                 <ul class="contact">
@@ -26,12 +30,15 @@
                 </ul>
             </article>
 
+            <!--LA PARTIE A PROPOS-->
             <article id="a_propos">
                 <h3 class="aside_titre_gras">À propos de moi</h3>
                 <p class="a_propos">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis eros nulla, ultricies in tempor sit amet, mattis id lacus. Pellentesque eget neque et nisi vehicula maximus. Praesent faucibus vestibulum erat, id accumsan lorem consectetur
                     tempor. Donec pharetra volutpat nunc at consequat. Cras porta a augue sed semper.</p>
             </article>
 
+
+            <!--LA PARTIE LOISIR-->
             <article id="loisirs">
                 <h3 class="aside_titre_gras">Loisirs</h3>
                 <div class="icon_loisirs">
@@ -42,8 +49,10 @@
             </article>
         </aside>
 
+        <!--LA PARTIE DROITE-->
         <section id="centre">
             <header>
+                <!--NOM PRENOM ET PROFESSION-->
                 <h1><span id="prenom">Olivia Cynthia</span> Remiki</h1>
                 <!--LE TRAIT SOUS LE DEVEL-->
                 <div id="titre">
@@ -59,6 +68,7 @@
             </header>
 
             <div id="page_corps">
+                <!--LA PARTIE FORMATION-->
                 <article class="page_article">
                     <div class="page_titre">
                         <div class="icon_article">
@@ -80,7 +90,11 @@
                                 <div class="texte">
                                     <h4>OpenClassrooms</h4><br />
                                     <h5 class="poste">Formation Développeur Web</h5>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis eros nulla, ultricies in tempor sit amet, mattis id lacus. Pellentesque eget neque et nisi vehicula maximus.</p>
+                                    <p>- Découper, assembler et intégrer tous les éléments d’une maquette graphique en HTML5 et CSS,<br /> - Ajouter du contenu audio et vidéo en HTML5,<br /> - Animer les pages web avec CSS3,<br /> - Appliquer les standards
+                                        du web et les normes en vigueur,<br /> - Construire un site web fluide s’adaptant à tout type d’écran (web, smartphone et tablette),<br /> - Améliorer le référencement naturel en utilisant les balises selon leur
+                                        sémantique,
+                                        <br /> - Faire réagir la page web en fonction des actions de l’utilisateur en JavaScript,<br /> - Se connecter à un service web pour exploiter des données tierces (API),<br /> - Gérer les comptes utilisateurs,<br
+                                        /> - Concevoir un site maintenable grâce à la gestion des erreurs et exceptions,<br /> - Créer, gérer et afficher le contenu d’une base de données.</p>
                                 </div>
                             </div>
                         </li>
@@ -98,7 +112,9 @@
                                 <div class="texte">
                                     <h4>Ligne et Formation</h4><br />
                                     <h5 class="poste">Formation WebDesigner</h5>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis eros nulla, ultricies in tempor sit amet, mattis id lacus. Pellentesque eget neque et nisi vehicula maximus.</p>
+                                    <p>- Maîtriserez les logiciels de conception graphique (Photoshop, Illustrator),<br /> - Concevoir à partir d'une charte graphique, une maquette, des prototypes de sites web,<br /> - Vision globale de l’environnement web
+                                        et de son cadre légal,<br /> - Comprendrez les bases de la programmation et des langages HTML et CSS,<br /> - Comprendrez le fonctionnement des moteurs de recherche et du référencement, <br /> - Assurerez l’organisation
+                                        et la coordination des différents interlocuteurs sur vos projets.</p>
                                 </div>
                             </div>
                         </li>
@@ -114,9 +130,10 @@
                                     </div>
                                 </div>
                                 <div class="texte">
-                                    <h4>EMB Web</h4><br />
+                                    <h4>EM Web (ESCAD)</h4><br />
                                     <h5 class="poste">Formation Webmaster</h5>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis eros nulla, ultricies in tempor sit amet, mattis id lacus. Pellentesque eget neque et nisi vehicula maximus.</p>
+                                    <p>- Maîtriser les techniques de conception, de modélisation et d’architecture d’un site web,<br /> - Utiliser un logiciel de conception graphique (Axure),<br /> - Maîtriser un logiciel de webdesign (Photoshop),<br />                                        - Connaître les langages de programmation HTML, CSS et PHP, <br /> - Optimiser le référencement naturel d’un site web, <br /> - Mener des campagnes de référencement payant SEA, <br /> - Utiliser des outils de mesure
+                                        d’audience (Webmaster Tools, Google Analytics).</p>
                                 </div>
                             </div>
                         </li>
@@ -128,37 +145,22 @@
                                         <i class="fas fa-circle fa-xs"></i>
                                     </div>
                                     <div class="annee">
-                                        2007 - 2009<br /> Argenteuil
+                                        2007/2009<br /> Argenteuil
                                     </div>
                                 </div>
                                 <div class="texte">
                                     <h4>CFA Affida</h4><br />
                                     <h5 class="poste">BAC Pro Comptabilité</h5>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis eros nulla, ultricies in tempor sit amet, mattis id lacus. Pellentesque eget neque et nisi vehicula maximus.</p>
-                                </div>
-                            </div>
-                        </li>
+                                    <p>- Maîtriser les déclaration de TVA,<br /> - Effectuer des rapprochement bancaire,<br /> - Étudier et enregistrer les factures et devis,<br /> - Faire des pointages de comptes clients et fournisseurs, <br /> - Apprendre
+                                        à gérer des conflits, <br /> - Découvrir les logiciels de Comptabilité (SAP, Ciel, Sage, EBP).</p>
 
-                        <li>
-                            <div class="formation">
-                                <div class="puce_bloc">
-                                    <div class="page_puce">
-                                        <i class="fas fa-circle fa-xs"></i>
-                                    </div>
-                                    <div class="annee">
-                                        2005 - 2007 <br/> Paris
-                                    </div>
-                                </div>
-                                <div class="texte">
-                                    <h4>Lycée Renée Cassin</h4><br />
-                                    <h5 class="poste">BEP Secrétariat</h5>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis eros nulla, ultricies in tempor sit amet, mattis id lacus. Pellentesque eget neque et nisi vehicula maximus.</p>
                                 </div>
                             </div>
                         </li>
                     </ul>
                 </article>
 
+                <!--LA PARTIE EXPERIENCE PROFESSIONNELLE-->
                 <article class="page_article">
                     <div class="page_titre">
                         <div class="icon_article">
@@ -180,7 +182,7 @@
                                 <div class="texte">
                                     <h4>Anyway Éditions</h4> <br />
                                     <h5 class="poste">Éditrice</h5>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis eros nulla, ultricies in tempor sit amet, mattis id lacus. Pellentesque eget neque et nisi vehicula maximus.</p>
+                                    <p>- Réception des manuscrits,<br /> - Préparer un manuscrit pour l’impression, <br /> - Faire la comptabilité (Facture, devis, déclaration TVA…).</p>
                                 </div>
                             </div>
                         </li>
@@ -198,7 +200,7 @@
                                 <div class="texte">
                                     <h4>Bertand SAS</h4> <br />
                                     <h5 class="poste">Secrétaire Aide-Comtpable</h5>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis eros nulla, ultricies in tempor sit amet, mattis id lacus. Pellentesque eget neque et nisi vehicula maximus.</p>
+                                    <p>- Traiter les fiches clients,<br /> - Gérer les litiges clients, <br /> - Surveiller et enregistrement des commandes clients (logiciel SAP).</p>
                                 </div>
                             </div>
                         </li>
@@ -216,13 +218,14 @@
                                 <div class="texte">
                                     <h4>Total France</h4> <br />
                                     <h5 class="poste">Gestionnaire Compte Clients</h5>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis eros nulla, ultricies in tempor sit amet, mattis id lacus. Pellentesque eget neque et nisi vehicula maximus.</p>
+                                    <p>- Traiter les fiches clients,<br /> - Gérer les litiges clients, <br /> - Gerer les dossiers adminitratifs (logiciel EBP et interne).</p>
                                 </div>
                             </div>
                         </li>
                     </ul>
                 </article>
 
+                <!--LA PARTIE RECOMMANDATION-->
                 <article class="page_article">
                     <div class="page_titre">
                         <div class="icon_article">
